@@ -3262,3 +3262,8 @@ $wgSitemapNamespaces = false;
  * ting this variable false.
  */
 $wgUseAutomaticEditSummaries = true;
+
+/*
+ * Track link changes 
+ */
+$wgTrackLinkChanges = false;
